--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <div class="services-grid">
             
             <!-- 1. Aadhaar -->
-            <a href="https://uidai.gov.in" target="_blank" style="text-decoration: none;">
+            <a href="https://myaadhaar.uidai.gov.in/en_IN" target="_blank" style="text-decoration: none;">
                 <div class="card rang-aadhaar">
                     <h3>🆔 Aadhaar Services</h3>
                     <p>New Enrollment, Update, Print & Correction.</p>
