--- a/index.html
+++ b/index.html
@@ -199,13 +199,13 @@
 
     <div style="background-color: #ff0000; color: #ffffff; padding: 12px; margin: 10px auto; width: 95%; max-width: 1000px; border-radius: 8px; border: 2px solid #ffffff; box-shadow: 0 4px 8px rgba(0,0,0,0.5);">
         <marquee behavior="scroll" direction="left" scrollamount="10" style="font-size: 18px; font-weight: bold;">
-            📢 डीके जन सुविधा केंद्र आपका हार्दिक स्वागत करता है हमारे पोर्टल पर. Mobile: 8318736819
+            📢 डीके जन सुविधा केंद्र आपका हार्दिक स्वागत एवं अभिनन्दन करता है।
         </marquee>
     </div>
 
     <div style="background-color: #0000ff; color: #ffffff; padding: 12px; margin: 10px auto; width: 95%; max-width: 1000px; border-radius: 8px; border: 2px solid #ffffff; box-shadow: 0 4px 8px rgba(0,0,0,0.5);">
         <marquee behavior="scroll" direction="left" scrollamount="10" style="font-size: 18px; font-weight: bold;">
-            📢 💐💐💐 आप सभी क्षेत्रवासियों को नव वर्ष 2026 की हार्दिक शुभकामनाएं एवं बधाई 💐💐💐.
+             💐💐💐 आप सभी क्षेत्रवासियों को नव वर्ष 2026 की हार्दिक शुभकामनाएं एवं बधाई 💐💐💐.
         </marquee>
     </div>
 
@@ -213,8 +213,8 @@
         <!-- Download App Section -->
         <div class="download-box">
             <h2>📱 Hamara Official App Download Karein</h2>
-            <p>Sabhi sarkari suvidhaon ka labh apne phone par uthayein.</p>
-            <a href="https://github.com/DKRAJA906/DK-JAN-SUVIDHA-KENDRA/releases/download/v5.03/DK.JAN.SUVIDHA.apk" class="btn">Download Android App</a>
+            <p>Sabhi sarkari suvidhaon ka labh apne phone par uthayein Ye 100% safe hai.</p>
+            <a href="https://github.com/DKRAJA906/DK-JAN-SUVIDHA-KENDRA/releases/download/v5.05/DK.JAN.SUVIDHA.apk" class="btn">Download Android App</a>
         </div>
 
         <h2 style="color: var(--primary-color);">Hamari Suvidhayein</h2>
@@ -390,7 +390,7 @@
         <h3 style="color: #4CAF50; border-bottom: 1px solid #444; padding-bottom: 10px;">📞 संपर्क करें (Contact Us)</h3>
         <p style="margin-top: 15px; line-height: 1.8;">
             <strong>📍 पता:</strong> रानीखेड़ा चौराहा, बछरावां<br>
-            <strong>📱 मोबाइल:</strong> +91 9310736819<br>
+            <strong>📱फ़ोन:</strong> +91 9310736819<br>
             <strong>📧 ईमेल:</strong> dkjansuvidha@gmail.com
         </p>
         <button onclick="document.getElementById('contactUs').style.display='none'" style="background: #4CAF50; color: black; border: none; padding: 8px 20px; margin-top: 15px; border-radius: 5px; cursor: pointer;">Close</button>
