--- a/index.html
+++ b/index.html
@@ -96,6 +96,70 @@
             margin-top: 10px;
         }
         .btn:hover { background-color: #f0f0f0; }
+        /* मेन कंटेनर */
+.sarkari-container {
+    display: flex;
+    flex-direction: column; /* मोबाइल के लिए एक के नीचे एक */
+    gap: 15px; /* बॉक्स के बीच का गैप */
+    margin: 20px 10px; /* ऊपर-नीचे 20px, दाएं-बाएं 10px का गैप */
+}
+
+/* हर बॉक्स का डिज़ाइन */
+.info-box {
+    border: 1px solid #ffb6c1; /* पिंक बॉर्डर */
+    background-color: white;
+    /* अगर आप कोनों को थोड़ा गोल चाहते हैं तो नीचे वाली लाइन रखें, वरना हटा दें */
+    border-radius: 5px; 
+    overflow: hidden; /* कोनों को साफ रखने के लिए */
+}
+
+/* लाल हेडर */
+.header-red {
+    background-color: #8a0000; /* गहरा लाल */
+    color: white;
+    padding: 8px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 16px;
+}
+
+/* लिस्ट */
+.info-list {
+    list-style-type: none; /* बुलेट डॉट्स हटा दिए हैं ताकि साफ दिखे */
+    padding: 10px;
+    margin: 0;
+}
+
+.info-list li {
+    margin-bottom: 8px;
+    border-bottom: 1px solid #eee; /* हर लिंक के नीचे हल्की लाइन */
+    padding-bottom: 4px;
+}
+
+.info-list li:last-child {
+    border-bottom: none;
+}
+
+/* लिंक्स */
+.info-list li a {
+    text-decoration: none;
+    color: #0000EE; /* नीला रंग */
+    font-size: 14px;
+    display: block; /* पूरा एरिया क्लिक हो सके */
+}
+
+/* View More बटन */
+.view-more {
+    text-align: right;
+    padding: 5px 10px;
+    background-color: #f9f9f9;
+}
+.view-more a {
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    font-size: 12px;
+}
 
         /* Services Grid - Yahan change kiya hai taaki buttons sahi dikhein */
         .services-grid {
@@ -216,6 +280,44 @@
             <p>Sabhi sarkari suvidhaon ka labh apne phone par uthayein Ye 100% safe hai.</p>
             <a href="https://github.com/DKRAJA906/DK-JAN-SUVIDHA-KENDRA/releases/download/v5.05/DK.JAN.SUVIDHA.apk" class="btn">Download Android App</a>
         </div>
+        <!-- Sarkari Result Style Section START -->
+<div class="sarkari-container">
+    
+    <!-- Result Box -->
+    <div class="info-box">
+        <div class="header-red">Results</div>
+        <ul class="info-list">
+            <li><a href="#">Assam Rifles Tradesman Result 2025</a></li>
+            <li><a href="#">SSC CGL Result 2024 Declared</a></li>
+            <li><a href="#">UP Police Constable Result</a></li>
+        </ul>
+        <div class="view-more"><a href="#">View More »</a></div>
+    </div>
+
+    <!-- Admit Card Box -->
+    <div class="info-box">
+        <div class="header-red">Admit Cards</div>
+        <ul class="info-list">
+            <li><a href="#">PNB Bank LBO Admit Card 2025</a></li>
+            <li><a href="#">SSC GD Constable Admit Card</a></li>
+            <li><a href="#">Gate 2025 Admit Card</a></li>
+        </ul>
+        <div class="view-more"><a href="#">View More »</a></div>
+    </div>
+
+    <!-- Latest Jobs Box -->
+    <div class="info-box">
+        <div class="header-red">Latest Jobs</div>
+        <ul class="info-list">
+            <li><a href="#">UP Anganwadi Bharti 2025</a></li>
+            <li><a href="#">Railway RRB NTPC Online Form</a></li>
+            <li><a href="#">Indian Navy Agniveer MR/SSR</a></li>
+        </ul>
+        <div class="view-more"><a href="#">View More »</a></div>
+    </div>
+
+</div>
+<!-- Sarkari Result Style Section END -->
 
         <h2 style="color: var(--primary-color);">Hamari Suvidhayein</h2>
         
