--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 /* लाल हेडर */
 .header-red {
-    background-color: #8a0000; /* गहरा लाल */
+    background-color: #2765F5; /* गहरा लाल */
     color: white;
     padding: 8px;
     font-weight: bold;
