--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
     <div class="info-box">
         <div class="header-red">Results</div>
         <ul class="info-list">
-            <li><a href="#">Assam Rifles Tradesman Result 2025</a></li>
-            <li><a href="#">SSC CGL Result 2024 Declared</a></li>
-            <li><a href="#">UP Police Constable Result</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
     </div>
@@ -298,9 +298,9 @@
     <div class="info-box">
         <div class="header-red">Admit Cards</div>
         <ul class="info-list">
-            <li><a href="#">PNB Bank LBO Admit Card 2025</a></li>
-            <li><a href="#">SSC GD Constable Admit Card</a></li>
-            <li><a href="#">Gate 2025 Admit Card</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
     </div>
@@ -309,9 +309,9 @@
     <div class="info-box">
         <div class="header-red">Latest Jobs</div>
         <ul class="info-list">
-            <li><a href="#">UP Anganwadi Bharti 2025</a></li>
-            <li><a href="#">Railway RRB NTPC Online Form</a></li>
-            <li><a href="#">Indian Navy Agniveer MR/SSR</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
     </div>
