--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <p>Sabhi sarkari suvidhaon ka labh apne phone par uthayein Ye 100% safe hai.</p>
             <a href="https://github.com/DKRAJA906/DK-JAN-SUVIDHA-KENDRA/releases/download/v5.06/DK.JAN.SUVIDHA.apk" class="btn">Download Android App</a>
         </div>
-        <!-- Sarkari Result Style Section START -->
+        <!-- Dk Result Style Section START -->
 <div class="sarkari-container">
     
     <!-- Result Box -->
@@ -315,9 +315,19 @@
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
     </div>
+    <!-- Important Links -->
+    <div class="info-box">
+        <div class="header-red">Latest Jobs</div>
+        <ul class="info-list">
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+        </ul>
+        <div class="view-more"><a href="#">View More »</a></div>
+    </div>
 
 </div>
-<!-- Sarkari Result Style Section END -->
+<!-- Dk Result Style Section END -->
 
         <h2 style="color: var(--primary-color);">Hamari Suvidhayein</h2>
         
