--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
     </div>
     <!-- Important Links -->
     <div class="info-box">
-        <div class="header-red">Latest Jobs</div>
+        <div class="header-red">Important Links</div>
         <ul class="info-list">
-            <li><a href="#">Coming Soon</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li><a href="https://eportal.incometax.gov.in/iec/foservices/#/pre-login/link-aadhaar-status">Adhar pan link status</a></li>
+            <li><a href="https://upmsp-cdn.s3.ap-south-1.amazonaws.com/pdf/Title_Table_2026.pdf">2026 की हाईस्कूल एवं इंटरमीडिएट परीक्षा का कार्यक्रम</a></li>
             <li><a href="#">Coming Soon</a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
