--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
         <div class="header-red">Important Links</div>
         <ul class="info-list">
             <li><a href="https://eportal.incometax.gov.in/iec/foservices/#/pre-login/link-aadhaar-status">Adhar pan link status</a></li>
-            <li><a href="https://upmsp-cdn.s3.ap-south-1.amazonaws.com/pdf/Title_Table_2026.pdf">2026 की हाईस्कूल एवं इंटरमीडिएट परीक्षा का कार्यक्रम</a></li>
+            <li><a href="https://upmsp-cdn.s3.ap-south-1.amazonaws.com/pdf/Title_Table_2026.pdf"target="_blank">2026 की हाईस्कूल एवं इंटरमीडिएट परीक्षा का कार्यक्रम</a></li>
             <li><a href="#">Coming Soon</a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
