--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@
         }
 
         /* Color Classes */
-        .rang-aadhaar { background: linear-gradient(135deg, #FF512F, #DD2476); }
-        .rang-resume { background: linear-gradient(135deg, #1A2980, #26D0CE); }
+        .rang-aadhaar { background: linear-gradient(135deg, #FF512F, #DD2476); 
         .rang-pan { background: linear-gradient(135deg, #f12711, #f5af19); }
         .rang-bijli { background: linear-gradient(135deg, #f12711, #f5af19) !important; }
         .rang-kisan { background: linear-gradient(135deg, #11998e, #38ef7d); }
@@ -342,13 +341,6 @@
                 </div>
             </a>
             
-            <!-- 2. Resume Builder -->
-            <a href="resume.html" target="_blank" style="text-decoration: none;">
-                <div class="card rang-resume">
-                    <h3>🧾 Resume Build</h3>
-                    <p>Professional Resume.</p>
-                </div>
-            </a>
             
             <!-- 3. PAN Card -->
             <a href="https://www.pan.utiitsl.com/newA.html" target="_blank" style="text-decoration: none;">
