--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         }
 
         /* Color Classes */
-        .rang-aadhaar { background: linear-gradient(135deg, #FF512F, #DD2476); 
+        .rang-aadhaar { background: linear-gradient(135deg, #FF512F, #DD2476); }
         .rang-pan { background: linear-gradient(135deg, #f12711, #f5af19); }
         .rang-bijli { background: linear-gradient(135deg, #f12711, #f5af19) !important; }
         .rang-kisan { background: linear-gradient(135deg, #11998e, #38ef7d); }
@@ -236,7 +236,6 @@
         .rang-epfo { background: linear-gradient(135deg, #79E713, #F0290A); }
         .rang-voter { background: linear-gradient(135deg, #0AF0E4, #F109CE); }
         .rang-pension { background: linear-gradient(135deg, #F18909, #1201F9); }
-        .rang-pdf { background: linear-gradient(135deg, #F00A5E, #75F505); }
         .rang-pdf { background: linear-gradient(135deg, #F00A5E, #75F505); }
         .rang-udyam { background: linear-gradient(135deg, #CA52FA, #0EECE5); }
 
