--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
         .rang-pension { background: linear-gradient(135deg, #F18909, #1201F9); }
         .rang-pdf { background: linear-gradient(135deg, #F00A5E, #75F505); }
         .rang-udyam { background: linear-gradient(135deg, #CA52FA, #0EECE5); }
+        .rang-photo { background: linear-gradient(135deg, #75F505, #CB356B); }
 
 
 
