--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@
         <ul class="info-list">
             <li><a href="https://eportal.incometax.gov.in/iec/foservices/#/pre-login/link-aadhaar-status"target="_blank">Adhar pan link status</a></li>
             <li><a href="https://upmsp-cdn.s3.ap-south-1.amazonaws.com/pdf/Title_Table_2026.pdf"target="_blank">2026 की हाईस्कूल एवं इंटरमीडिएट परीक्षा का कार्यक्रम</a></li>
-            <li><a href="https://consumer.uppcl.org/wss/pay_bill_home">बिजली का बिल देखें</a></li>
+            <li><a href="https://consumer.uppcl.org/wss/pay_bill_home"target="_blank">बिजली का बिल देखें</a></li>
+            <li><a href="https://myaadhaar.uidai.gov.in/check-aadhaar-validity/en"target="_blank">आधार कार्ड में मोबाइल नंबर चेक करे </a></li>
+            <li><a href="https://myaadhaar.uidai.gov.in/check-aadhaar-validity/en"target="_blank">आधार कार्ड में मोबाइल नंबर चेक करे </a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
     </div>
