--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <div class="info-box">
         <div class="header-red">Latest Jobs</div>
         <ul class="info-list">
-            <li><a href="#">Coming Soon</a></li>
+            <li><a href="https://upsssc.gov.in//AllNotifications.aspx">UPSSSC Lekhpal Online Form 2025 (7994 Post) – Start</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
         </ul>
