--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
     <div class="info-box">
         <div class="header-red">Latest Jobs</div>
         <ul class="info-list">
-            <li><a href="https://upsssc.gov.in//AllNotifications.aspx">UPSSSC Lekhpal Online Form 2025 (7994 Post) – Start</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li><a href="https://upsssc.gov.in//AllNotifications.aspx"target="_blank">UPSSSC Lekhpal Online Form 2025 (7994 Post) – Start</a></li>
+            <li><a href="https://www.upprpb.in/#/auth/landing"target="_blank">SSC GD Constable Online Form 2026 (25487 Posts)</a></li>
             <li><a href="#">Coming Soon</a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
