--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <li><a href="https://consumer.uppcl.org/wss/pay_bill_home"target="_blank">बिजली का बिल देखें</a></li>
             <li><a href="https://myaadhaar.uidai.gov.in/check-aadhaar-validity/en"target="_blank">आधार कार्ड में मोबाइल नंबर चेक करे </a></li>
             <li><a href="https://mocrefund.crcs.gov.in/depositor/#/depositor/register"target="_blank">SAHARA REFUND PORTAL </a></li>
-            <li><a href="https://mocrefund.crcs.gov.in/depositor/#/depositor/register"target="_blank">SAHARA REFUND PORTAL </a></li>
+            <li><a href="https://echallan.parivahan.gov.in/index/accused-challan"target="_blank">ऑनलाइन चालान चेक करे </a></li>
         </ul>
         <div class="view-more"><a href="#">View More »</a></div>
     </div>
