--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         .rang-pdf { background: linear-gradient(135deg, #F00A5E, #75F505); }
         .rang-udyam { background: linear-gradient(135deg, #CA52FA, #0EECE5); }
         .rang-photo { background: linear-gradient(135deg, #75F505, #CB356B); }
+        .rang-pdfeditor { background: linear-gradient(135deg, #8E2DE2, #CB356B); }
 
 
 
@@ -439,6 +440,13 @@
                 <div class="card rang-udyam">
                     <h3>🪪 Udyam Adhar</h3>
                     <p>udyamregistration.</p>
+                </div>
+            </a>
+             <!-- 17. PDFEDITOR -->
+            <a href="pdf-editor.html">
+                <div class="pdfeditor">
+                    <h3> PDF Editor</h3>
+                    <p>PDFEDITOR.</p>
                 </div>
             </a>
         </div> <!-- Services Grid Khatam -->
