--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             </a>
              <!-- 17. PDFEDITOR -->
             <a href="pdf-editor.html">
-                <div class="pdfeditor">
+                <div class="card rang-pdfeditor">
                     <h3> PDF Editor</h3>
                     <p>PDFEDITOR.</p>
                 </div>
