Add ID card print section to index.html

--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
         .rang-udyam { background: linear-gradient(135deg, #CA52FA, #0EECE5); }
         .rang-photo { background: linear-gradient(135deg, #75F505, #CB356B); }
         .rang-pdfeditor { background: linear-gradient(135deg, #8E2DE2, #CB356B); }
+        .rang-id { background: linear-gradient(135deg, #8E2DE2, #CB356B); }
 
 
 
@@ -447,6 +448,13 @@
                 <div class="card rang-pdfeditor">
                     <h3> PDF Editor</h3>
                     <p>PDFEDITOR.</p>
+                </div>
+            </a>
+            <!-- 17. Id card Print -->
+            <a href="idcardprint.html">
+                <div class="card rang-id">
+                    <h3>ID card print</h3>
+                    <p>Id card Print.</p>
                 </div>
             </a>
         </div> <!-- Services Grid Khatam -->
